objects/maps__LiveEventAssociation__c.object
<CustomObject>
    <fields>
        <fullName>maps__AssociatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Live Event Associations</relationshipLabel>
        <relationshipName>LiveEventAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__AssociatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Live Event Associations</relationshipLabel>
        <relationshipName>LiveEventAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__AssociatedLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Live Event Associations</relationshipLabel>
        <relationshipName>LiveEventAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__AssociatedOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Live Event Associations</relationshipLabel>
        <relationshipName>LiveEventAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__DistanceToStopFeet__c</fullName>
        <formula>maps__DistanceToStopMiles__c * 5280</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distance To Stop (ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DistanceToStopKilos__c</fullName>
        <label>Distance To Stop (km)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DistanceToStopMeters__c</fullName>
        <formula>maps__DistanceToStopKilos__c * 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distance To Stop (m)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DistanceToStopMiles__c</fullName>
        <description>Distance to the stop in miles</description>
        <formula>ROUND(maps__DistanceToStopKilos__c * 0.62137, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Distance to the stop in miles</inlineHelpText>
        <label>Distance To Stop (mi)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DistanceUnits__c</fullName>
        <label>Distance Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>miles</fullName>
                    <default>true</default>
                    <label>miles</label>
                </value>
                <value>
                    <fullName>kilometers</fullName>
                </value>
                <value>
                    <fullName>feet</fullName>
                </value>
                <value>
                    <fullName>meters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__EventDate__c</fullName>
        <formula>maps__LiveAssetDailySummaryEvent__r.maps__LiveAssetDailySummary__r.maps__Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__EventStartTime__c</fullName>
        <formula>maps__LiveAssetDailySummaryEvent__r.maps__EventStarted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__EventStopTime__c</fullName>
        <formula>maps__LiveAssetDailySummaryEvent__r.maps__EventEnded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Stop Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__LiveAssetDailySummaryEvent__c</fullName>
        <label>Live Asset Daily Summary Event</label>
        <referenceTo>maps__LiveAssetDailySummaryEvent__c</referenceTo>
        <relationshipLabel>Live Event Associations</relationshipLabel>
        <relationshipName>LiveEventAssociations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>maps__LiveSummaryStopRelationshipConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Summary Stop Relationship Config</label>
        <referenceTo>maps__LiveSummaryStopRelationshipConfig__c</referenceTo>
        <relationshipLabel>Live Event Associations</relationshipLabel>
        <relationshipName>LiveEventAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maps Live Event Association</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Maps Live Event Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Live Event Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>